# rShell

./: CMakeLists.txt  Makefile  README.md  _gitignore  cat  cat.txt  cating  cmake_install.cmake  names.txt  rshell  sorted.txt  test  toTest.txt  wordcount.txt
integration_tests/: allTests.sh  backtest.json  backtest.sh  commented_command_tests.sh  exit_command_tests.sh  input_redirection_tests.sh  literals.json  multiple_commands_tests.sh  output_redirection_tests.sh  outputredir.json  pipe.json  pipe_operator_tests.sh  precedence.json  precedence_tests.sh  redirection.json  run_all.sh  single_command_tests.sh  symbolics.json  test.py  test_literal_tests.sh  test_symbolic_tests.sh  testfile.txt
prototypes/: prototype1.cpp
src/: ariCompile.sh  commands.cpp  commands.h  connectors.cpp  connectors.h  hello.txt  hi.txt  integrator.cpp  integrator.h  main.cpp  parser.h  results.h  supVec.cpp  supVec.h  test.txt
unit_tests/: tests.cpp
